# opencollar

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  Makefile  SECURITY.md  build-win.py  config.env.example  config.example.json  focuslock-bridge.sh  focuslock-desktop-win.py  focuslock-desktop.py  focuslock-mail.py  focuslock-tray.py  focuslock_mesh.py  focuslock_ntfy.py  pyproject.toml  requirements.txt  watchdog-win.pyw
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  scorecard.yml  signed-commits.yml  ui.yml
android/companion/: AndroidManifest.xml  build.sh
android/companion/assets/: banks.json
android/companion/res/layout/: activity_main.xml
android/companion/res/mipmap-anydpi-v26/: ic_launcher.xml
android/companion/res/values/: colors.xml  styles.xml
android/companion/res/xml/: network_security_config.xml
android/companion/src/com/bunnytasker/: AdminReceiver.java  BunnyService.java  E2EEHelper.java  MainActivity.java  PairingManager.java  QrEncoder.java  R.java
android/controller/: AndroidManifest.xml  build.sh
android/controller/res/layout/: activity_main.xml  dialog_setup.xml
android/controller/res/values/: colors.xml  strings.xml  styles.xml
android/controller/res/xml/: network_security_config.xml
android/controller/src/com/focusctl/: E2EEHelper.java  MainActivity.java  R.java  VaultCrypto.java
android/slave/: AndroidManifest.xml  build.sh
android/slave/res/layout/: activity_focus.xml
android/slave/res/values/: styles.xml
android/slave/res/xml/: network_security_config.xml
android/slave/src/com/focuslock/: AdminReceiver.java  BootReceiver.java  ConsentActivity.java  ControlService.java  FocusActivity.java  LiberationActivity.java  PaymentListener.java  R.java  SigVerifier.java  SlaveSigner.java  SmsReceiver.java  VaultCrypto.java
docs/: 2026-04-03-mesh-reliability-overhaul.md  ARCHITECTURE.md  AUDIT-2026-04-27-EXIT.md  AUDIT-2026-04-27-STREAM-C-EXIT.md  AUDIT-2026-04-28-EXIT-C.md  AUDIT-FINDINGS-2026-04-27.md  AUDIT-PLAN.md  BUILD.md  CONFIG.md  MANUAL-BUNNY.md  MANUAL-LION.md  MANUAL-QA.md  PRICE-LIST.md  PUBLISHABLE-ROADMAP.md  QA-CHECKLIST.md  QA-pairing.md  QA-v1.2.0-mesh.md  QA-wizard-2026-04-27.md  README.md  SELF-HOSTING.md  STAGING.md  STATE-OWNERSHIP.md  THREAT-MODEL.md  UI-AUTOMATION-DECISION.md  USABILITY-AUDIT-2026-04-28.md  VAULT-DESIGN.md
docs/enforcement-hardening/: ROADMAP.md
installers/: README.md  homelab-setup.sh  install-desktop-collar.sh  install-mesh.ps1  install-mesh.sh  install-standing-orders.sh  qa-vault-mode.sh  re-enslave-all.sh  re-enslave-desktops.sh  re-enslave-lib.sh  re-enslave-phones.sh  re-enslave-server.sh  re-enslave-watcher.py  re-enslave-watcher.service  re-enslave-watcher.timer  re-enslave.config.example  release.sh  uninstall-desktop-collar.ps1  uninstall-desktop-collar.sh
services/: focuslock-bridge.service.example  focuslock-desktop.desktop  focuslock-desktop.service  focuslock-mail.service.example
shared/: focuslock_adb.py  focuslock_config.py  focuslock_evidence.py  focuslock_http.py  focuslock_llm.py  focuslock_payment.py  focuslock_penalties.py  focuslock_sync.py  focuslock_transport.py  focuslock_vault.py
staging/: config.json.template  qa_index_browser.py  qa_matrix.py  qa_runner.py  qa_wizard_browser.py  start-staging.sh
tests/: conftest.py  test_account_vault_stores.py  test_adb.py  test_audit_2026_04_27_h2_evidence_webhooks.py  test_audit_2026_04_27_round1.py  test_audit_2026_04_27_round2.py  test_audit_2026_04_27_round3.py  test_audit_2026_04_27_round4.py  test_audit_2026_04_27_stream_c_http_coverage.py  test_config.py  test_deadline_task.py  test_e2e_admin_routes.py  test_e2e_disposal_token.py  test_e2e_messages_admin.py  test_e2e_public_routes.py  test_e2e_qa.py  test_e2e_uncovered_webhooks.py  test_e2e_unsubscribe_deadline.py  test_e2e_web_session.py  test_evidence.py  test_http.py  test_initial_mesh_config.py  test_llm.py  test_mesh.py  test_message_store.py  test_messages.py  test_ntfy.py  test_pairing.py  test_payment.py  test_paywall_hardening.py  test_perf_smoke.py  test_qa_checklist_auto.py  test_relay_helpers.py  test_session_blob_relay.py  test_sync.py  test_transport.py  test_vault.py
tests/ui/: README.md  conftest.py  fingerprint.py  pages.py  test_direct_pair_fingerprint.py  test_pair_direct.py
web/: cost.html  index.html  signup.html  trust.html
