# Tool configuration for The Collar / Lion's Share / Bunny Tasker.
#
# Runtime install for the server uses requirements.txt (hash-pinned for
# supply-chain safety). The [project] block below exists so contributors
# can `pip install -e '.[dev]'` and get the test/lint stack in one shot,
# and so SBOM generators (cyclonedx, syft) have a manifest to read.

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "focuslock"
version = "1.0.0"
description = "Consensual remote device restriction — Lion's Share, Bunny Tasker, The Collar"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.10"
authors = [{ name = "The FocusLock Contributors" }]
keywords = ["consent-tech", "device-admin", "kink", "self-host", "e2ee"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications",
    "Topic :: Security :: Cryptography",
    "Intended Audience :: End Users/Desktop",
]
# Core runtime dep shared by server, desktop, and shared/ modules.
# Hash-pinned production install: pip install --require-hashes -r requirements.txt
dependencies = [
    "cryptography>=42",
]

[project.optional-dependencies]
# Windows desktop collar — pystray tray icon + Pillow icon conversion.
# build-win.py installs these at build time; listed here so editable installs
# work for contributors hacking on the Windows path from any host.
desktop-win = [
    "pystray>=0.19",
    "pillow>=10",
]
# Server install adds nothing beyond core today; reserved for future
# server-only deps so deployments can declare intent.
server = []
# Test + lint stack. CI installs these explicitly; contributors get them
# via `pip install -e '.[dev]'`.
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.urls]
Homepage = "https://github.com/NoahBunny/openleash"
Documentation = "https://github.com/NoahBunny/openleash/tree/main/docs"
Issues = "https://github.com/NoahBunny/openleash/issues"
Changelog = "https://github.com/NoahBunny/openleash/blob/main/CHANGELOG.md"

# This is a "metadata-only" project for now — the codebase is a mix of
# top-level scripts and a shared/ helper directory without __init__.py,
# so `pip install` here only installs the dependency closure (and the
# extras you opt into), not any Python modules. Phase 8 (Android Gradle
# migration) is the natural point to also migrate this to a src/ layout
# with proper packaging.
[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["shared", "."]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["shared"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = [
    "android",
    "web",
    "dist",
    "build",
    "__pycache__",
    "*.bak",
    "*.bak.*",
]

[tool.ruff.lint]
# Conservative starting set. Phase 1b adds S (bandit) after the
# exception audit — enabling it now would flood with known silent-except
# warnings we intend to fix deliberately.
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "W",      # pycodestyle warnings
    "I",      # isort — import ordering
    "UP",     # pyupgrade — modernize syntax for py310+
    "B",      # flake8-bugbear — real bug patterns
    "RUF",    # ruff-specific
]
ignore = [
    "E501",   # line-too-long — handled by formatter; long crypto/mesh strings are fine
    "B008",   # function call in default arg — common in handlers
    "B904",   # raise-from — will revisit in Phase 1b exception audit
    "UP015",  # open() mode 'r' — explicit is fine
]

[tool.ruff.lint.per-file-ignores]
"build-win.py" = ["E402", "RUF005"] # late imports after sys.path setup are intentional; list concat is clearer than unpack for pip-install args
"focuslock-desktop.py" = ["E402"]   # module-level dir setup before shared/ imports
"focuslock-desktop-win.py" = ["E402"]
"focuslock-mail.py" = ["E402"]
"installers/*" = ["E402", "S"]      # installer scripts — deliberately loose
"tests/*" = ["E402", "S"]           # tests — path hacks + test crypto values

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
ignore_missing_imports = true
# Codebase is currently untyped. Phase 2+ tightens these.
check_untyped_defs = false
disallow_untyped_defs = false
exclude = [
    "^android/",
    "^dist/",
    "^build/",
    "^web/",
]

# Stricter posture on shared security-critical modules.
[[tool.mypy.overrides]]
module = [
    "shared.focuslock_vault",
    "shared.focuslock_payment",
    "shared.focuslock_config",
]
check_untyped_defs = true
warn_unreachable = true
